# instagram-clone

./: .gitignore  README.md
python_backend/config/: settings.py
rust_backend/: Cargo.toml
rust_backend/src/: main.rs
